Changelog
=========

11.5.dev0 - (unreleased)
------------------------

11.4 - (2016-09-13)
-------------------
* Change: add versionId also as title for eea_permalink_objects
  [ichim-david refs #76165]
* Change: removed hardcoded inline style of selectautocomplete_widget in
  order to avoid having the dataset provider select span over the edit
  content area
  [ichim-david]
* Bug fix: fix isinstance check for zc.twisted.Failure
  [ichim-david refs #75480 and #75074]

11.3 - (2016-09-05)
-------------------
* Bug fix: store only job id instead of the actual job even within
  annotations as aparrently this still breaks versioning
  [ichim-david and alec refs #75074]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [ichimdav refs #75074]

11.2 - (2016-09-05)
-------------------
* Bug fix: Plone search returning NOT latest version
  [lucas refs #75032]

11.1 - (2016-06-02)
-------------------
* Feature: added EEA Permalink Mapping object used for preserving
  permalinking of datasets links after upgrade of versioning to the
  version mapping
  [ichim-david refs #72875]

11.0 - (2016-06-02)
-------------------
* Feature: added EEA Permalink Mapping SimpleItem used for mapping old
  permalink to the new permalink in order to allow datasets to have
  a version Mapping and keep backward compatibility
  [ichimd-david refs #72521]

10.9 - (2016-05-19)
-------------------
* Change: pylint fixes
  [ichim-david refs #71940]

10.8 - (2016-03-01)
-------------------
* Bug fix: fixed faceted filter for showing the latest version of given object
  [ichimdav refs #69328]

10.7 - (2016-02-03)
-------------------
* Bug fix: prevent conversion error due to permission if there is a need to
  delete the images that should no longer be there such as in the cases where
  another figure is replacing the current figure
  [ichimdav refs #68012]

10.6 - (2015-12-11)
-------------------